<resources>
    <string name="app_name">Find daMatch</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="select_board_theme">Select board theme: </string>
    <string name="leaderBoard">Leader Board</string>
    <string name="scoreView"></string>
    <string name="help">HELP</string>
    <string name="skip">SKIP</string>
    <string name="highScore">HIGH SCORE</string>
    <string name="playGame">PLAY GAME</string>
    <string name="title">Find daMatch</string>
    <string name="select_order">Orders: </string>
    <string name="select_game_length">Game Length: </string>
    <string name="gameMode">Game Mode</string>
    <string name="reset">RESET</string>
    <string name="saveUsername">CONFIRM</string>
    <string name="DifficultyMode">Difficulty Mode</string>
    <string name="chooseImage">Import</string>
    <string name="teamMembers">
        Created by:\n
        * Dang Xuan Anh Tran - 301354210\n
        * Jason Sebastian Aritanto - 301377046\n
        * Sehajvir Singh Pannu - 301386534\n
        * Gursmeep Singh Syan - 301386570
    </string>
    <string name="helpText">\n
        * The deck have 7 cards, each card have 3 images.\n
        * Initially, one card is automatically reveal and place inside the discard pile.\n
        * The game start by revealing the top card from the draw pile, and at the same time, the timer start.\n
        * Your mission is in the shortest time possible, find the image that appear on both cards from the draw pile and discard pile.\n
        * When you found the image, the card that is revealed to you is putted onto the discard pile and the next top card is revealed for you to continue.\n
        * When there is no remaining card, the timer stop. Top 5 shortest times will be displayed in the high score board.\n
    </string>
    <string name="title_activity_won">Won</string>
    <string name="search">Search</string>

    <string name="clear_search">Clear Search</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="winText"></string>
    <string name="enter_your_username">Enter your \nusername</string>
    <string name="anonymous">Anonymous</string>
    <string name="clear">Clear</string>
    <string name="edit">edit</string>
    <string name="options">Options</string>
    <string name="save">Save</string>
    <string name="delete">delete</string>
    <string name="game_modes">Game Modes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_cards">Save Cards</string>

</resources>